# zoe-boswell

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
boswell/: __init__.py  __main__.py  advisor.py  capture.py  context.py  meeting.py  notify.py  prompts.py  report.py
docs/: boswell.html  federation.md  mom.html  start.md
